# saibr_python

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements.txt  setup.py
.github/workflows/: binder.yaml  test.yaml
binder/: Dockerfile
data/dataset1/n2/: ROI_1.txt  ROI_2.txt  ROI_3.txt
docs/source/: conf.py  index.rst  modules.rst  saibr.rst
saibr/: __init__.py  funcs.py  legacy.py  misc.py  roi.py  saibr.py
scripts/: SAIBRdemonstration.ipynb
tests/: test_.py
